--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection":"Server=DESKTOP-8772J14;Database=Prac;Trusted_Connection=True;TrustServerCertificate=True "
+    "DefaultConnection":"Server=localhost;Database=Prac;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
